# cplusplus_template

./: .gitignore  .pre-commit-config.yaml  .ycm_extra_conf.py  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  Doxyfile  README.md  run_check.sh  run_docker.sh
.github/workflows/: format-lint-unittest.yaml
include/first_module/: first_module.hpp
include/second_module/: second_module.hpp
res/: .p10k.zsh  .zshrc  README.md
src/: main.cpp
src/cplucplu_template/: main.cpp
src/first_module/: first_module.cpp
src/second_module/: second_module.cpp
tests/: test_second_module.cpp
